[package]
name = "supertictactoe"
version = "0.1.0"
authors = ["Philipp Meyer <phil.mey.06@gmail.com"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui_extras = { version = "*", features = ["svg"] }
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

